# FIFA

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package.json  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: index.py
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py  models.py  rate_limit.py
backend/app/assistant/: gemini.py  rules.py
backend/app/assistant/prompts/: v1.yaml
backend/app/crowd/: __init__.py  density.py
backend/app/repository/: base.py  firestore_repo.py  memory_repo.py
backend/app/routes/: assist.py  crowd.py  health.py  sustainability.py  wayfinding.py
backend/app/sustainability/: tracker.py
backend/app/wayfinding/: navigator.py  venue_graph.py
backend/tests/: conftest.py  test_api.py  test_density.py  test_gemini.py  test_models.py  test_rules.py  test_sustainability.py  test_wayfinding.py
blueprints/: ACCESSIBILITY.md  CODE_QUALITY.md  DESIGN_AND_REASONING.md  EFFICIENCY.md  GOOGLE_SERVICES.md  REPO_STRUCTURE.md  SECURITY.md  TESTING.md
docs/: ARCHITECTURE.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: stadium.spec.ts
frontend/scripts/: sync-types.sh
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: CrowdHeatmap.test.tsx  CrowdHeatmap.tsx  FanAssistant.test.tsx  FanAssistant.tsx  (+6 more)
(+9 files in other folders)
