[project]
name = "stadiumiq"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "google-genai>=0.1.0",
    "google-cloud-firestore>=2.16.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.7",
    "pyyaml>=6.0.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "slowapi.*",
    "pythonjsonlogger.*",
    "yaml.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "D", "UP", "ANN", "B", "C4", "SIM", "PL", "C90", "RUF"
]
ignore = [
    "E501", # long lines handled by format
    "B008", # do not perform function calls in argument defaults (standard for FastAPI Depends)
    "ANN101", # missing type annotation for self
    "ANN102"  # missing type annotation for cls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",       # docstrings in tests not strictly required
    "ANN",     # type annotations in tests relaxed
    "PLR0913"  # too many arguments in test helpers
]

[tool.ruff.lint.mccabe]
max-complexity = 10
